src/main/scala/edu/ist/psu/sagnik/research/inkscapesvgprocessing/transformparser/impl/TransformParser.scala
package edu.ist.psu.sagnik.research.inkscapesvgprocessing.transformparser.impl

/**
 * Created by sagnik on 12/9/15.
 */

import edu.ist.psu.sagnik.research.inkscapesvgprocessing.transformparser.model._

import scala.util.parsing.combinator.RegexParsers
import scala.language.implicitConversions
/**
 * Created by sagnik on 11/12/15.
 * ? => opt
 * * => rep
 * */

class TransformParser extends RegexParsers {

  override def skipWhitespace = false

  def wsp: Parser[String]= "\\s|\\n".r ^^ {_.toString} //TODO: this needs to be changed to accomodate #x20, #xD, #xA, #x9
  //see http://www.xmlplease.com/normalized for an example.

  def digit:Parser[String]="""0|1|2|3|4|5|6|7|8|9""".r ^^ {_.toString}

  def digit_sequence: Parser[String]=digit~rep(digit) ^^{case d~ds => if (ds.isEmpty) d else  d+ds.mkString("")} // digit~digit_sequence ^^{case d~ds => println(s"digit ${d} digit sequence: ${ds}"); ds.toString}|digit^^{_.toString} //

  def sign:Parser[String]="""\+|\-""".r ^^{_.toString}

  def exponent:Parser[Double]="""e|E""".r~opt(sign)~digit_sequence ^^ { //TODO: Not handling cases such as e!234, which are definitely wrong
    case ep~Some(sign)~digitSeq =>
      if ("-".equals(sign)) scala.math.exp(-1*digitSeq.toDouble) else scala.math.exp(digitSeq.toDouble)
    case _ => 1d
  }

  def fractional_constant:Parser[String]=
    opt(digit_sequence)~"""\.""".r~digit_sequence ^^{
      case Some(ds1)~dot~ds2 => ds1+"."+ds2
      case None~dot~ds2=> ds2
      case _ => ""
    } |
      digit_sequence~"""\.""".r  ^^{
        case ds~dot=>ds.toString
        case _ => ""
      }

  def floating_point_constant: Parser[String]=
    fractional_constant~opt(exponent)^^{
      case fc~Some(ep)=>(fc.toDouble*ep).toString
      case fc~None=>fc
    } |
      digit_sequence~exponent ^^{
        case ds~ep=>(ds.toDouble*ep).toString
      }

  def integer_constant:Parser[String]= digit_sequence^^{_.toString}

  def comma: Parser[String] = """,""".r ^^ {_.toString}

  def comma_wsp: Parser[String] = wsp~rep(wsp)~opt(comma)~rep(wsp)^^ { _.toString} | comma~rep(wsp)^^{_.toString}

  def flag:Parser[Double] = """0|1""".r ^^{_.toDouble}

  def number:Parser[Double]=
    opt(sign)~floating_point_constant^^{
      case Some(s)~fc => if ("-".equals(s)) ("-"+fc).toDouble else fc.toDouble
      case None~fc => fc.toDouble
    } |
      opt(sign)~integer_constant^^{
        case Some(s)~ic => if ("-".equals(s)) ("-"+ic).toDouble else ic.toDouble
        case None~ic => {ic.toDouble}
      }

  //TODO: to check why can't avoid case statement
  def skewY:Parser[SkewYOp]=
    """skewY""".r~rep(wsp)~"""(""".r~rep(wsp)~number~rep(wsp)~""")""".r^^{
      case c~ws1~lb~ws2~angle~ws3~rb => SkewYOp("skewY",SkewYOpArg(angle.toFloat))
    }

  def skewX:Parser[SkewXOp]=
    """skewY""".r~rep(wsp)~"""(""".r~rep(wsp)~number~rep(wsp)~""")""".r^^{
      case c~ws1~lb~ws2~angle~ws3~rb => SkewXOp("skewY",SkewXOpArg(angle.toFloat))
    }

  def rotate:Parser[RotateOp]=
    """rotate""".r~rep(wsp)~"""(""".r~rep(wsp)~number~opt(comma_wsp~number~comma_wsp~number)~rep(wsp)~""")""".r^^{
      case c~ws1~lb~ws2~angle~Some(cw1~cx~cw2~cy)~ws3~rb=>RotateOp("rotate",RotateOpArg(angle.toFloat,Some(cx.toFloat),Some(cy.toFloat)))
      case c~ws1~lb~ws2~angle~None~ws3~rb=>RotateOp("rotate",RotateOpArg(angle.toFloat,None,None))
    }

  def scale:Parser[ScaleOp]=
    """scale""".r~rep(wsp)~"""(""".r~rep(wsp)~number~opt(comma_wsp~number)~rep(wsp)~""")""".r^^{
      case c~ws1~lb~ws2~sx~Some(cw~sy)~ws3~rb => ScaleOp("scale",ScaleOpArg(sx.toFloat,Some(sy.toFloat)))
      case c~ws1~lb~ws2~sx~None~ws3~rb => ScaleOp("scale",ScaleOpArg(sx.toFloat,None))
    }

  def translate:Parser[TranslateOp]=
    """translate""".r~rep(wsp)~"""(""".r~rep(wsp)~number~opt(comma_wsp~number)~rep(wsp)~""")""".r^^{
      case c~ws1~lb~ws2~tx~Some(cw~ty)~ws3~rb => TranslateOp("translate",TranslateOpArg(tx.toFloat,Some(ty.toFloat)))
      case c~ws1~lb~ws2~tx~None~ws3~rb =>  TranslateOp("translate",TranslateOpArg(tx.toFloat,None))
    }

  def matrix:Parser[MatrixOp]=
    """matrix""".r~rep(wsp)~"""(""".r~rep(wsp)~number~comma_wsp~number~comma_wsp~number~comma_wsp~number~comma_wsp~number~comma_wsp~number~rep(wsp)~""")""".r^^{
      case m~ws1~lb~ws2~a~cw1~b~cw2~c~cw3~d~cw4~e~cw5~f~ws3~rb =>
        MatrixOp("matrix",MatrixOpArg(a.toFloat,b.toFloat,c.toFloat,d.toFloat,e.toFloat,f.toFloat))
    }

  def transform:Parser[TransformCommand]=
    matrix^^{a=>a}|
      translate^^{a=>a}|
      scale^^{a=>a}|
      rotate^^{a=>a}|
      skewX^^{a=>a}|
      skewY^^{a=>a}

//  transform-list ::=
//    wsp* transforms? wsp*
//      transforms ::=
//    transform
//  | transform comma-wsp+ transforms

  def transforms:Parser[Seq[TransformCommand]]=
  transform^^{a=>List(a)}|
  transform~comma_wsp~rep(comma_wsp)~transforms^^{
    case t~cw1~cw2~ts=> if (ts.isEmpty) List(t) else t+:ts
  }

  def transform_list:Parser[Option[Seq[TransformCommand]]]=
  rep(wsp)~opt(transforms)~rep(wsp)^^{
    case ws1~Some(ts)~ws2 => Some(ts)
    case ws1~None~ws2 => None
  }

}

object TestTransformParser extends TransformParser{
  def main(args: Array[String]) = {
    parse(digit_sequence, "12345") match {
      //  parse(wsp, " ") match {
      //    parse(coordinate_pair, "12    20") match {
      case Success(matched,_) => println(s"[matched]: ${matched}")
      case Failure(msg,_) => println("FAILURE: " + msg)
      case Error(msg,_) => println("ERROR: " + msg)
    }
  }
}

